fixed overflow hidden on content change bug

--- a/frontend/src/components/header/Header.module.scss
+++ b/frontend/src/components/header/Header.module.scss
@@ -61,7 +61,7 @@ header {
                 z-index: 100;
                 transition: top 0.5s ease-in-out;
                 @include mq(medium) {
-                    min-height: 6em;
+                    min-height: 4em;
                     max-width: fit-content;
                     flex-direction: row;
                     position: static;
